# glassbox-ai

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  orchestrator.py  pyproject.toml  requirements.txt  server.json  server.py  trust_db.py  tshirt-design.html
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: agent-fix.yml  ci.yml  dashboard.yml
deploy/: Dockerfile
docs/: .gitignore  competitive-analysis.md  index.html  speed-optimization-report.md
docs/architecture/: agent-failure-analysis.md  current-architecture.md  feedback-flywheel-requirements.md
docs/blogs/: README.md
docs/dashboard/: index.html
docs/research/: README.md  paper-explainer.html
evals/: __init__.py  bug_factory.py  bug_spec.py  catalog.py  config.py  results.md
github-app/: .gitignore  README.md  manifest.json  setup.py
memorabilia/: README.md  export-patches.js  package-lock.json  package.json
memorabilia/backup/: design-v6-diff.html  jellyfish-variants.html  jellyfish-white-solid.html  yinyang-clean.html
memorabilia/tshirt/: design-v5.html  design-v7-patches.html  icon-animals-bold.html  icon-variants-animals.html  icon-variants.html  (+4 more)
scripts/: agent_fix.py  hmr_entry.py  run_local.sh  run_mcp.sh  setup_keychain.sh
tests/: test_agent_phase1.py  test_agent_phase2.py  test_agent_phase3.py  test_agent_phase4.py  test_agent_phase5.py  test_agent_phase6.py  test_agent_phase7.py  test_agent_phase8.py  test_evals.py  test_glassbox.py  test_integration.py  test_silent_workflow.py
(+40 files in other folders)
